Bottombar + imágenes de iconos

--- a/Android/Guillegram/app/src/main/res/layout/activity_login.xml
+++ b/Android/Guillegram/app/src/main/res/layout/activity_login.xml
@@ -94,7 +94,8 @@
                         android:text="@string/create_here"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/textSize_dont_hace_account"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:onClick="goContainerActivity"/>
 
                 </RelativeLayout>
             </LinearLayout>
