--- a/Android/Guillegram/app/src/main/res/values/colors.xml
+++ b/Android/Guillegram/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="divider">#BDBDBD</color>
     <color name="edtTextColorWhite">#FFF</color>
     <color name="edtTextColorBlack">#000</color>
+    <color name="background_textcard">#53292929</color>
 </resources>
