Archivos añadios. Pantallas y fragments creados. Fixear los Toolbars, navigation menu, recycler view y borrar la clase y layout test

--- a/Android/Guillegram/app/src/main/res/layout/cardview_picture.xml
+++ b/Android/Guillegram/app/src/main/res/layout/cardview_picture.xml
@@ -4,7 +4,8 @@
     android:id="@+id/cardCardview"
     android:layout_width="match_parent"
     android:layout_height="@dimen/heigth_cardview"
-    cardview:cardCornerRadius="@dimen/corner_radius_cardview">
+    cardview:cardCornerRadius="@dimen/corner_radius_cardview"
+    android:layout_marginBottom="@dimen/vertical_activity_margin">
 
     <FrameLayout
         android:layout_width="match_parent"
