--- a/Android/Guillegram/app/src/main/res/layout/fragment_search.xml
+++ b/Android/Guillegram/app/src/main/res/layout/fragment_search.xml
@@ -4,4 +4,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.fragments.ProfileFragment"></android.support.design.widget.CoordinatorLayout>
+    tools:context=".views.fragments.SearchFragment"></android.support.design.widget.CoordinatorLayout>
