--- a/Android/Guillegram/app/src/main/res/layout/activity_container.xml
+++ b/Android/Guillegram/app/src/main/res/layout/activity_container.xml
@@ -6,5 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".views.ContainerActivity">
 
-    <include layout="@layout/bottombar"></include>
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+    <include layout="@layout/bottommenu"/>
 </RelativeLayout>
