--- a/Android/Guillegram/app/src/main/res/layout/activity_login.xml
+++ b/Android/Guillegram/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/txt_btn_login"
-                    android:theme="@style/RaisedButtonDark" />
+                    android:theme="@style/RaisedButtonDark"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -84,18 +84,17 @@
                         android:text="@string/dont_have_account"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/textSize_dont_hace_account"
-                        android:textStyle="bold"
-                        android:onClick="goCreateAccount"/>
+                        android:textStyle="bold"/>
 
                     <TextView
+                        android:id="@+id/createhere"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toRightOf="@id/dontHaveAccount"
                         android:text="@string/create_here"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/textSize_dont_hace_account"
-                        android:textStyle="bold"
-                        android:onClick="goContainerActivity"/>
+                        android:textStyle="bold"/>
 
                 </RelativeLayout>
             </LinearLayout>
