--- a/Android/Guillegram/app/src/main/res/values/dimens.xml
+++ b/Android/Guillegram/app/src/main/res/values/dimens.xml
@@ -13,4 +13,7 @@
     <dimen name="timecard_marginlefet_card">5dp</dimen>
     <dimen name="like_margintop_card">10dp</dimen>
     <dimen name="bottombar_height">70dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
