Pantalla de detalles creada

--- a/Android/Guillegram/app/src/main/res/values/dimens.xml
+++ b/Android/Guillegram/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="appbarlayout_height">256dp</dimen>
+    <dimen name="textsize_usernamedetail">25sp</dimen>
 </resources>
