--- a/Android/Guillegram/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/Guillegram/app/src/main/res/layout/fragment_profile.xml
@@ -4,4 +4,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".views.fragments.ProfileFragment"></android.support.design.widget.CoordinatorLayout>
