--- a/Android/Guillegram/app/src/main/res/layout/bottommenu.xml
+++ b/Android/Guillegram/app/src/main/res/layout/bottommenu.xml
@@ -10,6 +10,7 @@
     app:itemIconTint="@android:color/white"
     app:itemTextColor="@android:color/white"
     app:menu="@menu/tabs"
+    android:layout_alignParentBottom="true"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"/>
