--- a/Android/Guillegram/app/src/main/res/layout/activity_container.xml
+++ b/Android/Guillegram/app/src/main/res/layout/activity_container.xml
@@ -9,7 +9,8 @@
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/bottombar_height"/>
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/bottombar_height"/>
 
 
     <include layout="@layout/bottommenu" />
