Perfil funcional con transiciones

--- a/Android/Guillegram/app/src/main/res/layout/cardview_picture.xml
+++ b/Android/Guillegram/app/src/main/res/layout/cardview_picture.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/heigth_cardview"
             android:background="@drawable/foto"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:transitionName="@string/trasitionname_picture"/>
 
         <LinearLayout
             android:layout_width="match_parent"
