--- a/Android/Guillegram/app/src/main/res/layout/activity_login.xml
+++ b/Android/Guillegram/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:passwordToggleEnabled="true"
                     android:theme="@style/editTextWhite">
 
                     <android.support.design.widget.TextInputEditText
