Falta por retocar imagenes del usuairo y consultas correctas de Spring

--- a/Android/Guillegram/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/Guillegram/app/src/main/res/layout/fragment_profile.xml
@@ -55,6 +55,7 @@
         android:id="@+id/pictureprofileRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="@dimen/vertical_activity_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
