--- a/Android/Guillegram/app/src/main/res/layout/activity_picture_detail.xml
+++ b/Android/Guillegram/app/src/main/res/layout/activity_picture_detail.xml
@@ -24,7 +24,6 @@
                 android:id="@+id/imageHeader"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/foto"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
                 android:transitionName="@string/trasitionname_picture"/>
@@ -69,20 +68,20 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin">
 
-                <TextView
-                    android:id="@+id/likeNumberDetail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="10"
-                    android:textSize="@dimen/textsize_likenumber" />
+                <!--<TextView-->
+                    <!--android:id="@+id/likeNumberDetail"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="10"-->
+                    <!--android:textSize="@dimen/textsize_likenumber" />-->
 
-                <TextView
-                    android:id="@+id/secondWordDetail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/marginleft_secondword"
-                    android:text="@string/second_word_detail"
-                    android:textSize="@dimen/textsize_likenumber" />
+                <!--<TextView-->
+                    <!--android:id="@+id/secondWordDetail"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginLeft="@dimen/marginleft_secondword"-->
+                    <!--android:text="@string/second_word_detail"-->
+                    <!--android:textSize="@dimen/textsize_likenumber" />-->
 
             </LinearLayout>
 
