--- a/Android/Guillegram/app/src/main/res/layout/actionbar_toolbar.xml
+++ b/Android/Guillegram/app/src/main/res/layout/actionbar_toolbar.xml
@@ -12,6 +12,23 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
+        app:popupTheme="@style/AppTheme.PopupOverlay">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="right">
+
+            <ImageView
+                android:id="@+id/logout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_login"
+                android:layout_marginRight="@dimen/icontoolbar_maringright"
+                android:layout_marginTop="@dimen/icontoolbar_margintop"/>
+        </LinearLayout>
+
+    </android.support.v7.widget.Toolbar>
+
 
 </android.support.design.widget.AppBarLayout>
