--- a/Android/Guillegram/app/src/main/res/values/dimens.xml
+++ b/Android/Guillegram/app/src/main/res/values/dimens.xml
@@ -17,8 +17,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="appbarlayout_height">256dp</dimen>
-    <dimen name="textsize_usernamedetail">25sp</dimen>
-    <dimen name="textsize_likenumber">15sp</dimen>
+    <dimen name="textsize_usernamedetail">18sp</dimen>
+    <dimen name="textsize_likenumber">22sp</dimen>
     <dimen name="marginleft_secondword">7dp</dimen>
     <dimen name="height_divider">1dp</dimen>
     <dimen name="padding_top_tittleimage_detail">20dp</dimen>
@@ -38,4 +38,5 @@
     <dimen name="localizacionCard">15sp</dimen>
     <dimen name="icontoolbar_maringright">20dp</dimen>
     <dimen name="icontoolbar_margintop">15dp</dimen>
+    <dimen name="textsize_content">15dp</dimen>
 </resources>
