--- a/Android/Guillegram/app/src/main/res/layout/activity_picture_detail.xml
+++ b/Android/Guillegram/app/src/main/res/layout/activity_picture_detail.xml
@@ -72,7 +72,7 @@
                     <!--android:id="@+id/likeNumberDetail"-->
                     <!--android:layout_width="wrap_content"-->
                     <!--android:layout_height="wrap_content"-->
-                    <!--android:text="10"-->
+                    <!--android:text="@string/stringby"-->
                     <!--android:textSize="@dimen/textsize_likenumber" />-->
 
                 <!--<TextView-->
@@ -111,7 +111,7 @@
                 android:paddingTop="@dimen/padding_top_tittleimage_detail"
                 android:paddingRight="@dimen/padding_horizontal_textcontent_detail"
                 android:text="@string/lorem"
-                android:textSize="@dimen/textsize_likenumber" />
+                android:textSize="@dimen/textsize_content" />
 
 
         </LinearLayout>
